--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
- .header {
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+ .logo {
    color: #B92B27;
  }
