--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -46,7 +46,7 @@
    justify-content: space-around;
  }
 
- .session-form{
+ .session-form {
     width: 150px;
     font-weight: bold;
     height: 100%;
@@ -54,8 +54,11 @@
     color: #333;
     font-size: 13px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border-right: solid 1px #333;
     padding-right: 100px;
+ }
+
+ #signup-form {
+    border-right: solid 1px #333;
  }
 
 
@@ -86,4 +89,8 @@ width: 100%;
     border: 1px solid #e2e2e2;
     border-radius: 3px;
     box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
+}
+
+.demo-login-button {
+  margin: 25px;
 }
