--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -1,5 +1,4 @@
 .welcome-page {
-  background-image: url('RickandMortyBackground.jpg');
   background-image: url(RickandMortyBackground.jpg);
   display: flex;
   justify-content: center;
@@ -13,6 +12,7 @@
    color: #B92B27;
    font-size: 80px;
    text-align: center;
+   font-weight: bolder;
  }
 
 .welcome-quote {
@@ -20,6 +20,7 @@
    text-align: center;
    font-size: 19px;
    font-family: fantasy;
+   margin: 32px;
  }
  .welcome-content {
     background-size: cover;
@@ -44,38 +45,104 @@
    display: flex;
    flex-direction: row; 
    justify-content: space-around;
- }
+   border-bottom: solid 1px lightgray;
+   padding: 32px;
+}
 
  .session-form {
-    width: 150px;
-    font-weight: bold;
-    height: 100%;
-    line-height: 1.4;
-    color: #333;
+    width: 200px;
+    color: #949494;
     font-size: 13px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-right: 100px;
- }
+  }
+  
+  #login-form {
+    border-left: solid 1px lightgrey ;
+    padding: 40px;
+    padding-top: 0;
+  }
 
- #signup-form {
-    border-right: solid 1px #333;
- }
+  #signup-form {
+    color: #666;
+    font-weight: bold;
+    letter-spacing: .5px;
+    font-size: 11px;
+  }
+  
+  .fit-names {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
+  .form-title-name {
+    font-size: 13px;
+    color: #333;
+}
 
-.form-login-buttons {
+ 
+ .form-login-buttons {
+   background-color: #3e78ad;
+   font-size: 15px;
+   color: white;
+   line-height: 1.4;
+   float: right;
+   border: 1px solid #3a66ad;
+   padding: 3px 7px 4px 7px;
+   font-weight: 500;
+   border-radius: 3px;
+  }
+  
+  .session-buttons-pocket {
+    line-height: 1.4;
+    color: #949494;
+    font-size: 13px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    padding: 4%;
+    padding-top: 0;
+    float: left;
+    box-sizing: border-box;
+    width: 50%;
+    font-weight: 400;
+  }
+
+.demo-login-button {
     background-color: #3e78ad;
-    font-size: 15px;
     color: white;
     line-height: 1.4;
     float: right;
     border: 1px solid #3a66ad;
-    padding: 3px 7px 4px 7px;
     font-weight: 500;
+    border-radius: 3px;
+    margin-bottom: 16px;
+    font-size: 16px;
+    padding: 8px 16px;
+    width: 270px;
+    box-shadow: 0 1px 1px 0 rgba(200,200,200,0.2);
+    box-sizing: border-box;
+    transition: opacity ease-in-out 100ms,color ease-in-out 100ms,background-color ease-in-out 100ms,border-color ease-in-out 100ms;
+    border-radius: 3px;
+}
+
+.signup-form-button {
+    background-color: #df4930;
+    color: white;
+    line-height: 1.4;
+    float: right;
+    border: 1px solid #df4930;
+    font-weight: 500;
+    border-radius: 3px;
+    margin-bottom: 16px;
+    font-size: 16px;
+    padding: 8px 16px;
+    width: 270px;
+    box-shadow: 0 1px 1px 0 rgba(200,200,200,0.2);
+    box-sizing: border-box;
+    transition: opacity ease-in-out 100ms,color ease-in-out 100ms,background-color ease-in-out 100ms,border-color ease-in-out 100ms;
     border-radius: 3px;
 }
 
 .form-input-boxes {
-width: 100%;
+    width: 100%;
     font-size: 13px;
     line-height: 1.4;
     padding-left: 8px;
@@ -89,8 +156,4 @@ width: 100%;
     border: 1px solid #e2e2e2;
     border-radius: 3px;
     box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
-}
-
-.demo-login-button {
-  margin: 25px;
 }
