--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -98,7 +98,7 @@
     font-size: 13px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
     padding: 4%;
-    padding-top: 0;
+    padding-top: 2%;
     float: left;
     box-sizing: border-box;
     width: 50%;
