--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -157,3 +157,16 @@
     border-radius: 3px;
     box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
 }
+
+.error-messages {
+    padding: 8px;
+    border: 1px solid #b92b27;
+    color: #b92b27;
+    clear: both;
+    border-radius: 4px;
+    margin: 8px 0;
+    font-size: 13px;
+    font-weight: 400;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    line-height: 1.4;
+}
