Bootstrapped background image to window to render on Heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+  
+  <script type="text/javascript">
+    window.fullLogoURL = "<%= image_url('RickandMortyBackground.jpg') %>";
+  </script>
   </head>
 
   <body>
