Fitted background cover to welcome and signup page

--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -1,5 +1,5 @@
 .welcome-page {
-  background-image: url(RickandMortyBackground.jpg);
+  // background-image: url(RickandMortyBackground.jpg);
   display: flex;
   justify-content: center;
   background-size: cover;
