--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 
  /* login page css */
  
- .modal-background {
+ #modal-background {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -26,7 +26,7 @@
   z-index: 10;
 }
 
-.modal-child {
+#modal-child {
   position: absolute;
   top: 50%;
   left: 50%;
