Added user's first and last name to question box

--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -29,6 +29,13 @@
 }
 
 .feed-item {
-  color: grey;
   height: 250px;
+}
+
+.resources {
+  font-size: 13px;
+  color: #939598;
+  border-top-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
 }
