--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -7,10 +7,15 @@
   padding-top: 16px;
   background: border-box;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   box-sizing: border-box;
   border: solid 1px lightgrey;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0.6);
+}
+
+.question-name {
+  font-size: 13px;
+  color: #939598;
 }
 
 #question-invite {
