Added css styling to dashboard

--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   box-sizing: border-box;
   border: solid 1px lightgrey;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.6);
+  background-color: white;
 }
 
 .question-name {
