--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -1,6 +1,8 @@
 .dashboard {
   height: 100%;
   width: 100%;
+  background-color: #efefef;
+
 }
 
 .categories-bar {
@@ -20,21 +22,51 @@
   color: #636466;
   font-weight: 400;
   height: 23px;
-  line-height: 18.2px;  
+  line-height: 18.2px;
 }
 
 .feed {
-  width: 600px;
   display: flex;
+  width: 1002px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 30px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
 }
 
 .feed-item {
   height: 250px;
   border: solid 1px lightgray;
+  background-color: white;
+  height: 250px;
+  border: solid 1px lightgray;
+  background-color: white;
+  padding-bottom: 4px;
+  padding-top: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
-#feed-question {
+
+.feed-header {
+  font-size: 13px;
+  color: #939598;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;  
+}
+
+.feed-question {
   font-weight: bold;
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+.feed-answer {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 15px;
+  line-height: 1.4;
+  color: rgb(40, 40, 41);
 }
 
 .resources {
