Styled answer box component

--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -3,8 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .answer-input {
   width: 100%;
-  height: 60px;
+  height: 150px;
   font-size: 18px;
+}
+
+.question-page-question {
+  font-weight: bold;
+  color: #282829;
+  font-size: 21px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  line-height: 1.4;
+  tab-size: 4;
+  word-break: break-word;
 }
 
 .answer-form {
@@ -23,14 +33,7 @@
   justify-content: space-around;
 }
 
-.answer-form-header {
+#cancel-or-submit-answer-section {
   background-color: #f7f7f8;
-  border-bottom-style: solid;
-  border-width: 1px;
-  border-color: #dee0e1;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 16px;
-  padding-right: 16px;
-  font-size: 15px;
 }
+
