--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -14,8 +14,8 @@
 }
 
 .question-name {
-  color: #282829;
-  font-size: 15px;
+  font-size: 13px;
+  color: #939598;
 }
 
 #question-invite {
@@ -32,21 +32,13 @@
 }
 
 #question-form {
-  box-sizing: border-box;
-  direction: ltr;
-  width: 100%;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #dee0e1;
-  border-radius: 3px;
-  margin-top: 16px;
-  display: block;
-  margin-bottom: 16px;
   height: 300px;
+  width: 400px;
   padding-bottom: 24px;
   padding-left: 32px;
   padding-right: 32px;
   padding-top: 32px;
+  display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
