Added dropdown to header for profile logout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   
   <script type="text/javascript">
     window.fullLogoURL = "<%= image_url('RickandMortyBackground.jpg') %>";
+    window.profilePic = "<%= image_url('profile.png') %>";
   </script>
   </head>
 
