Added onClick link function to logo to redirect to dashboard

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -12,6 +12,10 @@
   font-weight: bolder;
  }
 
+ #logo:hover {
+   text-decoration: underline;
+ }
+
 .profile-dropdown {
    height: 40px;
    border: solid 2px #B92B27;
