--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -33,14 +33,31 @@
 
 #question-form {
   height: 300px;
-  width: 400px;
   padding-bottom: 24px;
   padding-left: 32px;
   padding-right: 32px;
   padding-top: 32px;
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
+    box-sizing: border-box;
+    direction: ltr;
+    display: flex;
+    position: relative;
+    min-height: 400px;
+    max-height: 80vh;
+    max-width: 90vw;
+    width: 620px;
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #dee0e1;
+    align-self: center;
+    flex-direction: column;
+    overflow-y: auto;
+    background-color: #fff;
+    line-height: 1.4;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-size: 15px;
+    font-weight: 400;
 }
 
 .question-input {
@@ -71,4 +88,41 @@
   padding-right: 20px;
   padding-top: 7px;
   border-color: #2e69ff;
+}
+
+.cancel-button {
+  background-color: transparent;
+  border: none;
+  font-size: 14px;
+  font-weight: 500;
+  color: #636466;
+}
+
+.question-header {
+  box-sizing: border-box;
+  direction: ltr;
+  display: flex;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
+  align-items: center;
+  background-color: #f7f7f8;
+  line-height: 1.4;
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  color: rgb(40, 40, 41);
+}
+.question-form-name {
+  box-sizing: border-box;
+  direction: ltr;
+  font-weight: 500;
+  color: #b92b27;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 24px;
+  padding-right: 24px;
+  display: block;
+  text-align: inherit;
+  text-size-adjust: 100%;
+  border-bottom: solid 2px #b92b27;
 }
