Added dropdown for posts

--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -52,6 +52,7 @@
   padding-top: 16px;
   padding-left: 16px;
   padding-right: 16px;
+  margin-bottom: 10px;
 }
 
 .feed-header {
@@ -86,3 +87,6 @@
   border-color: #dee0e1;
 }
 
+.drop-button-dots {
+  color: #B92B27;
+}
