--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   border: solid 1px lightgrey;
   background-color: white;
+  margin-bottom: 10px;
 }
 
 .question-name {
