--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -71,16 +71,19 @@ background-color: white;
   display: inline-block;
 }
 
-.dropdown-content {
+.dropdown-content{
   display: none;
   position: absolute;
-//   background-color: #f9f9f9;
-//   min-width: 160px;
-//   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-//   padding: 12px 16px;
+  background-color: #f9f9f9;
+  min-width: 200px;
+  min-height: 80px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 14px 18px;
   z-index: 1;
 }
+
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
