--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -16,62 +16,22 @@
    text-decoration: underline;
  }
 
+ 
+ // div
+ .dropdown {
+   position: relative;
+   display: block;
+  }
+
+// dropdown button logo in header 
 .profile-dropdown {
-   height: 40px;
-   border: solid 2px #B92B27;
-   border-radius: 25px;
+    height: 40px;
+    border: solid 2px #B92B27;
+    border-radius: 25px;
 }
 
-.dropdown-content {
-display: none;
-position: absolute;
-z-index: 1;
-border: solid 1px gray;
-height: 25px;
-width: 100px;
-padding-top: 4px;
-padding-bottom: 4px;
-padding-left: 16px;
-padding-right: 16px;
-background-color: white;
-}
-
-.header-question-click {
-   background-color: #b92b27;
-   border-bottom-left-radius: 1000px;
-   border-bottom-right-radius: 1000px;
-   border-top-left-radius: 1000px;
-   border-top-right-radius: 1000px;
-   border: white;
-   box-sizing: border-box;
-   /* color: rgb(40, 40, 41); */
-   cursor: pointer;
-   direction: ltr;
-   display: inline-block;
-   font-family: -apple-system, system-ui, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-   font-size: 15px;
-   font-stretch: 100%;
-   font-style: normal;
-   font-variant-caps: normal;
-   font-variant-east-asian: normal;
-   font-variant-ligatures: normal;
-   font-variant-numeric: normal;
-   font-weight: 400;
-   height: 30px;
-   line-height: 21px;
-   padding-bottom: 5px;
-   padding-left: 15px;
-   padding-right: 15px;
-   padding-top: 5px;
-   color: white;
- }
-
-.dropdown {
-  position: relative;
-  display: block;
-}
-
-.dropdown-content{
+// ul
+.dropdown-content{ 
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -80,12 +40,22 @@ background-color: white;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 14px 18px;
   z-index: 1;
+  height: 25px;
+  width: 100px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 16px;
 }
 
-
+// div ul
 .dropdown:hover .dropdown-content {
-  display: inline-block;
+  display: block;
   font-family: inherit; /* Important for vertical align on mobile phones */
   margin: 0;
 }
 
+// ul > li
+.dropdown-content > li:hover {
+  display: block;
+  background-color: #B92B27;
+}
