--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -30,18 +30,23 @@
     border-radius: 25px;
 }
 
+// dropdown button for feed item
+.drop-button-dots {
+  color: #B92B27;
+  font-size: 20px;
+  padding: 15px;
+}
+
 // ul
 .dropdown-content{ 
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 200px;
-  min-height: 80px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  width: max-content;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 14px 18px;
   z-index: 1;
-  height: 25px;
-  width: 100px;
+  height: auto;
   padding-top: 4px;
   padding-bottom: 4px;
   padding-left: 16px;
@@ -58,4 +63,20 @@
 .dropdown-content > li:hover {
   display: block;
   background-color: #B92B27;
+}
+
+.dropdown-options {
+  border: none;
+    font-size: 13px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    color: #282829;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.dropdown-area {
+  display: flex;
+  justify-content: flex-end;
 }
