--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -74,7 +74,7 @@
 }
 
 .feed-item {
-  height: 420px;
+  height: auto;
   border: solid 1px lightgray;
   background-color: white;
   padding-bottom: 4px;
