--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -7,6 +7,13 @@
   font-size: 18px;
 }
 
+.question-page-box {
+  width: 1002px;
+  padding-top: 30px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
 .question-page-question {
   font-weight: bold;
   color: #282829;
@@ -42,42 +49,4 @@
 
 #cancel-or-submit-answer-section {
   background-color: #f7f7f8;
-}
-
-.answer-headr {
-  box-sizing: border-box;
-  direction: ltr;
-  display: flex;
-  border-bottom-style: solid;
-  border-width: 1px;
-  border-color: #dee0e1;
-  align-items: center;
-  background-color: #f7f7f8;
-  line-height: 1.4;
-  font-size: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  color: rgb(40, 40, 41);
-}
-
-.answer-form-name {
-  box-sizing: border-box;
-  direction: ltr;
-  font-weight: 500;
-  color: #b92b27;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 24px;
-  padding-right: 24px;
-  display: block;
-  text-align: inherit;
-  text-size-adjust: 100%;
-  border-bottom: solid 2px #b92b27;
-  cursor: pointer;
-}
-
-.answer-author {
-  height: 25px;
-  font-size: 13px;
-  color: #939598;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
