--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -35,7 +35,7 @@
 }
 
 #question-form {
-justify-content: space-around;
+justify-content: space-between;
 display: flex;
 position: relative;
 min-height: 320px;
