--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -50,3 +50,18 @@
 #cancel-or-submit-answer-section {
   background-color: #f7f7f8;
 }
+
+.answers-count {
+  margin-right: 0.1px;
+  border-bottom-style: solid;
+  border-top-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
+  margin-bottom: 20px;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  font-size: 15px;
+  font-weight: 500;
+  color: #282829;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
