--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -146,3 +146,11 @@ flex-direction: column;
   color: #939598;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+
+.question-answer-item {
+  margin-right: 0.1px;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
+  padding-bottom: 8px;
+}
