Resized uploaded images

--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -64,3 +64,7 @@
   color: #282829;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+
+.image {
+  max-height: 400px;
+}
