--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -22,10 +22,18 @@
    font-family: fantasy;
    margin: 32px;
  }
+
+.author-info {
+   color:grey;
+   text-align: center;
+   font-size: 19px;
+   font-family: fantasy;
+   margin: 32px;
+ }
+
  .welcome-content {
     background-size: cover;
-    height: 700px;
-    width: 600px;
+    height: 650px;
     background: #fff;
     border: 1px solid #e2e2e2;
     box-shadow: 0 0 5px #888;
@@ -78,7 +86,8 @@
     font-size: 13px;
     color: #333;
     font-weight: bold;
-
+    margin-bottom: 8px;
+    line-height: 1.4;
 }
 
  
@@ -111,7 +120,7 @@
     font-weight: 400;
   }
 
-.demo-login-button {
+.signup-form-button {
     background-color: #3e78ad;
     color: white;
     line-height: 1.4;
@@ -136,7 +145,7 @@
   cursor: pointer;  
 }
 
-.signup-form-button {
+.demo-login-button {
     background-color: #df4930;
     color: white;
     line-height: 1.4;
@@ -164,8 +173,8 @@
     margin-bottom: 8px;
     font-weight: 400;
     display: block;
-    background: #fff;
     outline: 0;
+    background-color: #EEE;
     border: 1px solid #e2e2e2;
     border-radius: 3px;
     box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
@@ -187,4 +196,11 @@
     font-weight: 400;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
     line-height: 1.4;
+}
+
+.mainpage-footer {
+  padding: 16px;
+  border-top: 1px solid #e2e2e2;
+  background: #fafafa;
+  height: 30px;
 }
