--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -5,6 +5,15 @@
 
 }
 
+.dashboard-header {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+.dashboard-header + .feed {
+  padding-top: 102px;
+}
 .categories-bar {
   font-family: -apple-system, system-ui, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 15px;
@@ -24,7 +33,7 @@
     height: 23px;
     line-height: 18.2px;
     margin-bottom: 8px;
-    padding: 4px;
+    padding: 10px;
     height: auto;
 }
 .category {
@@ -33,7 +42,7 @@
     height: 23px;
     line-height: 18.2px;
     margin-bottom: 8px;
-    padding: 4px;
+    padding: 10px;
 }
 
 .category:hover {
@@ -91,6 +100,7 @@
   padding-left: 16px;
   padding-right: 16px;
   margin-bottom: 10px;
+  border-radius: 3px;
 }
 
 .feed-header {
@@ -98,6 +108,14 @@
   font-size: 13px;
   color: #939598;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;  
+}
+
+.feed-author-name {
+  font-size: 15px;
+  color: #282829;
+  font-weight: bold;
+  margin-bottom: 8px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 .feed-question {
@@ -130,19 +148,32 @@
 .searchbar {
   width: 300px;
   font-size: 13px;
-  line-height: 1.4;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
   min-height: 32px;
-  margin-bottom: 8px;
   font-weight: 400;
-  display: block;
-  outline: 0;
   border: 1px solid #e2e2e2;
   border-radius: 3px;
-  box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
+  box-shadow: inset 0 1px 1px rgba(200, 200, 200, 0.3);
 }
 
 .searchbar:hover {
   border: solid 1px #2e69ff;
+  cursor: pointer;
+}
+
+.searchbar-result {
+  cursor: pointer;
+  box-sizing: border-box;
+  direction: ltr;
+  display: flex;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
+  -webkit-tap-highlight-color: transparent;
+  align-items: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
