--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,14 +4,14 @@
   align-items: center;
   background-color: rgb(255, 255, 255);
   height: 50px;
-  padding: 15px;
+  padding: 5px;
   padding-right: 25px;
   padding-left: 25px;
 }
 
 #logo {
    color: #B92B27;
-  font-size: 45px;
+  font-size: 40px;
   font-weight: bolder;
  }
 
@@ -52,7 +52,7 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  width: max-content;
+  width: inherit;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 14px 18px;
   z-index: 1;
@@ -85,14 +85,17 @@
 }
 
 .dropdown-options {
-  border: none;
-    font-size: 13px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    color: #282829;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+  cursor: pointer;
+  box-sizing: border-box;
+  direction: ltr;
+  display: flex;
+  -webkit-tap-highlight-color: transparent;
+  align-items: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  width: max-content;
 }
 
 .dropdown-area {
