Styling questions page

--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -164,3 +164,14 @@ flex-direction: column;
   padding-bottom: 8px;
   padding-top: 20px
 }
+
+.answer-text {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 15px;
+  line-height: 1.4;
+  color: rgb(40, 40, 41);
+  font-weight: 400;
+  text-size-adjust: 100%;
+  tab-size: 4;
+  word-break: break-word;
+}
