Centering questions page

--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -7,11 +7,17 @@
   font-size: 18px;
 }
 
+.question-page {
+  display: flex;
+  flex-direction: column;
+}
+
 .question-page-box {
   width: 630px;
   padding-top: 30px;
   padding-left: 24px;
   padding-right: 24px;
+  align-self: center;
 }
 
 .question-page-question {
