Formatting feed item

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <script type="text/javascript">
     window.fullLogoURL = "<%= image_url('RickandMortyBackground.jpg') %>";
     window.profilePic = "<%= image_url('profile.png') %>";
+    window.magnifyingGlass = "<%= image_url('magnifyingGlass.png') %>";
   </script>
   </head>
 
