--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -102,3 +102,57 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.searchbar {
+  display: flex;
+  width: 300px;
+  font-size: 13px;
+  min-height: 32px;
+  font-weight: 400;
+  border: 1px solid #e2e2e2;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 1px rgba(200, 200, 200, 0.3);
+}
+
+.searchbar:hover {
+  border: solid 1px #2e69ff;
+  cursor: pointer;
+}
+
+.searchbar-result {
+  cursor: pointer;
+  box-sizing: border-box;
+  direction: ltr;
+  display: flex;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
+  -webkit-tap-highlight-color: transparent;
+  align-items: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.mag-glass {
+  height: 16px;
+  width: 16px;
+  padding: 10px;
+}
+
+.search-input {
+  font-size: 13px;
+  font-weight: 400;
+  box-sizing: border-box;
+  direction: ltr;
+  width: 100%;
+  box-shadow: none;
+  background-color: transparent;
+  padding: 0px;
+  min-height: 26px;
+  height: unset;
+  outline: none;
+  border: none;
+  flex: 1 1 0%;
+}
