--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
     window.fullLogoURL = "<%= image_url('RickandMortyBackground.jpg') %>";
     window.profilePic = "<%= image_url('profile.png') %>";
     window.magnifyingGlass = "<%= image_url('magnifyingGlass.png') %>";
+    window.coding = "<%= image_url('coding.jpg') %>";
+    window.bootcamp = "<%= image_url('bootcamp.jpg') %>";
+    window.feed = "<%= image_url('feed.jpg') %>";
+    window.finance = "<%= image_url('finance.png') %>";
+    window.career = "<%= image_url('career.png') %>";
   </script>
   </head>
 
