--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -7,6 +7,10 @@
   padding: 5px;
   padding-right: 25px;
   padding-left: 25px;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.04);
 }
 
 #logo {
