--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -53,6 +53,8 @@
 
 // ul
 .dropdown-content{ 
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 15px;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -69,7 +71,6 @@
 // div ul
 .dropdown:hover .dropdown-content {
   display: block;
-  font-family: inherit; /* Important for vertical align on mobile phones */
   margin: 0;
   cursor: pointer; 
 }
