--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,24 @@
     window.fullLogoURL = "<%= image_url('RickandMortyBackground.jpg') %>";
     window.profilePic = "<%= image_url('profile.png') %>";
     window.magnifyingGlass = "<%= image_url('magnifyingGlass.png') %>";
-    window.coding = "<%= image_url('coding.jpg') %>";
-    window.bootcamp = "<%= image_url('bootcamp.jpg') %>";
-    window.feed = "<%= image_url('feed.jpg') %>";
-    window.finance = "<%= image_url('finance.png') %>";
-    window.career = "<%= image_url('career.png') %>";
+    window.Feed = "<%= image_url('feed.jpg') %>";
+
+    window.Programming = "<%= image_url('coding.jpg') %>";
+    window.Finance = "<%= image_url('finance.png') %>";
+    window.Books = "<%= image_url('books.png') %>";
+    window.Criminology = "<%= image_url('criminology.png') %>";
+    window.Philosophy = "<%= image_url('philosophy.png') %>";
+    window.Nature = "<%= image_url('nature.png') %>";
+    window.Psychology = "<%= image_url('psychology.png') %>";
+    window.Music = "<%= image_url('music.png') %>";
+    window.Career = "<%= image_url('career.png') %>";
+    window.Technology = "<%= image_url('technology.png') %>";
+    window.Art = "<%= image_url('art.png') %>";
+    window.History = "<%= image_url('history.png') %>";
   </script>
   </head>
 
-  <body>
+  <body id="page">
     <%= yield %>
   </body>
 </html>
