--- a/app/assets/stylesheets/api/topics.scss
+++ b/app/assets/stylesheets/api/topics.scss
@@ -1,3 +1,59 @@
 // Place all the styles related to the api/topics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.topic-page {
+  display: flex;
+  box-sizing: initial;
+  direction: ltr;
+  width: 1002px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 30px;
+  align-items: stretch;
+}
+
+.topic-dash {
+  box-sizing: border-box;
+  direction: ltr;
+  width: 658px;
+}
+
+.topic-img {
+  box-sizing: border-box;
+  direction: ltr;
+  max-width: 100%;
+  width: 80px;
+  height: 80px;
+  min-width: 80px;
+  border-radius: 3px;
+}
+
+.topic-info {
+  display: flex;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 16px;
+  padding-bottom: 8px;
+  box-sizing: border-box;
+  direction: ltr;
+  border-left-style: solid;
+  border-right-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
+  background-color: #fff;
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  line-height: 1.4;
+  color: rgb(40, 40, 41);
+  text-size-adjust: 100%;
+  font-weight: 400;
+}
+
+.topic-name {
+  margin-left: 16px;
+  font-size: 21px;
+  text-size-adjust: 100%;
+  font-weight: bold;
+  color: #282829;
+}
