Changing search bar functionality

--- a/app/assets/stylesheets/api/topics.scss
+++ b/app/assets/stylesheets/api/topics.scss
@@ -57,3 +57,13 @@
   font-weight: bold;
   color: #282829;
 }
+
+.topic-search {
+  color: #939598;
+}
+
+.search-img {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+}
