--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -84,8 +84,7 @@
 
 // ul > li
 .dropdown-content > li:hover {
-  display: block;
-  background-color: #B92B27;
+  background-color: #efefef;
   cursor: pointer; 
 }
 
