--- a/app/assets/stylesheets/topic_checkbox.scss
+++ b/app/assets/stylesheets/topic_checkbox.scss
@@ -1,8 +1,9 @@
 /* Customize the label (the container) */
 .container {
-  display: block;
+  display: flex;
   position: relative;
   padding-left: 35px;
+  margin-top: 12px;
   margin-bottom: 12px;
   cursor: pointer;
   font-size: 22px;
@@ -26,8 +27,9 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 18px;
+  width: 18px;
+  margin-top: 2px;
   background-color: #eee;
 }
 
@@ -38,7 +40,7 @@
 
 /* When the checkbox is checked, add a blue background */
 .container input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: royalblue;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -55,13 +57,64 @@
 
 /* Style the checkmark/indicator */
 .container .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
+  left: 6px;
+  top: 1px;
+  width: 4px;
+  height: 12px;
   border: solid white;
-  border-width: 0 3px 3px 0;
+  border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+
+.question-form-topics-header {
+  font-size: 19px;
+  font-weight: bold;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  color: rgb(40, 40, 41);
+  box-sizing: border-box;
+  direction: ltr;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 24px;
+  padding-right: 24px;
+  cursor: pointer;
+}
+
+.question-topic-instructions {
+  line-height: 1.4;
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+.question-on-topics-form {
+  font-size: 15px;
+  line-height: 1.4;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  color: rgb(40, 40, 41);
+  font-weight: bold;
+}
+
+.inside-question-topic-form {
+  padding: 16px;
+}
+
+.topic-label {
+  color: #636466;
+  box-sizing: border-box;
+  direction: ltr;
+  font-size: 13px;
+  height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
+  direction: ltr;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: inline-flex;
+  border-radius: 3px;
+  white-space: nowrap;
+  padding-left: 8px;
+  padding-right: 8px;
+  background-color: #f7f7f8;
 }
