Adding a home button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     window.profilePic = "<%= image_url('profile.png') %>";
     window.magnifyingGlass = "<%= image_url('magnifyingGlass.png') %>";
     window.Feed = "<%= image_url('feed.jpg') %>";
+    window.Home = "<%= image_url('home.png') %>";
 
     window.Programming = "<%= image_url('coding.jpg') %>";
     window.Finance = "<%= image_url('finance.png') %>";
