--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -24,6 +24,30 @@
    cursor: pointer; 
  }
 
+#feedlogo {
+  color: #B92B27;
+  font-size: 25px;
+  display: flex;
+  padding-bottom: 3px;
+ }
+
+ #feedlogo:hover {
+   border-bottom: 1px solid #B92B27;
+   cursor: pointer; 
+ }
+
+.home-name {
+  font-weight: 600;
+  font-size: 20px;
+  padding-top: 5px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+.home-category-icon {
+    height: 25px;
+    width: 25px;
+    padding-right: 8px;
+}
  
  // div
  .dropdown {
