--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -70,11 +70,27 @@
     padding-top: 0;
   }
 
+  #signup-page-height {
+    height: 350px;
+  }
+
   #signup-form {
     color: #666;
     font-weight: bold;
     letter-spacing: .5px;
     font-size: 11px;
+    margin-right: 30px;
+  }
+
+  .signup-agreement {
+    color: #949494;
+    font-size: 11px;
+    font-weight: 400;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    line-height: 1.4;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 110%;
   }
   
   .fit-names {
@@ -168,6 +184,7 @@
 }
 
 .form-input-boxes {
+  margin-top: 10px;
     width: 100%;
     font-size: 13px;
     line-height: 1.4;
@@ -193,6 +210,7 @@
 }
 
 .session-form-input-boxes {
+  margin-top: 10px;
     float: right;
     box-sizing: border-box;
     padding: 3px 5px;
@@ -234,4 +252,9 @@
   border-top: 1px solid #e2e2e2;
   background: #fafafa;
   height: 30px;
+}
+
+.signup-form-buttons {
+  display: flex;
+  justify-content: space-between;
 }
