--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -23,12 +23,27 @@
    margin: 32px;
  }
 
+.welcome-quote-signup {
+   color:grey;
+   text-align: center;
+   font-size: 19px;
+   font-family: fantasy;
+   margin: 15px;
+ }
+
 .author-info {
    color:grey;
    text-align: center;
    font-size: 19px;
    font-family: fantasy;
    margin: 32px;
+ }
+.author-info-signup {
+   color:grey;
+   text-align: center;
+   font-size: 19px;
+   font-family: fantasy;
+   margin: 5px;
  }
 
  .welcome-content {
@@ -58,7 +73,7 @@
 }
 
  .session-form {
-    width: 220px;
+    width: 240px;
     color: #949494;
     font-size: 13px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -79,7 +94,7 @@
     font-weight: bold;
     letter-spacing: .5px;
     font-size: 11px;
-    margin-right: 30px;
+    padding-right: 50px;
   }
 
   .signup-agreement {
