Styling minor details

--- a/app/assets/stylesheets/api/topics.scss
+++ b/app/assets/stylesheets/api/topics.scss
@@ -48,6 +48,8 @@
   color: rgb(40, 40, 41);
   text-size-adjust: 100%;
   font-weight: 400;
+  margin-bottom: 10px;
+  border: solid 1px lightgray;
 }
 
 .topic-name {
