--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -124,6 +124,8 @@
   padding-left: 16px;
   padding-right: 16px;
   width: max-content;
+  font-size: 13px;
+  color: #282829;
 }
 
 .dropdown-area {
@@ -158,6 +160,8 @@
   padding-bottom: 8px;
   padding-left: 16px;
   padding-right: 16px;
+  font-size: 13px;
+  color: #282829;
 }
 
 .mag-glass {
