Styling question page

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -28,7 +28,8 @@
   color: #B92B27;
   font-size: 25px;
   display: flex;
-  padding-bottom: 5px;
+  padding-top: 5px;
+  height: -webkit-fill-available;
  }
 
  #feedlogo:hover {
