--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -10,6 +10,8 @@
 .question-page {
   display: flex;
   flex-direction: column;
+  background-color: white;
+  height: -webkit-fill-available;
 }
 
 .question-page-box {
@@ -27,6 +29,7 @@
   line-height: 1.4;
   tab-size: 4;
   word-break: break-word;
+  font-weight: bold;
 }
 
 .answer-box {
@@ -73,4 +76,12 @@
 .image-dashboard {
   max-height: 400px;
   max-width: -webkit-fill-available;
+}
+
+.question-page-author-name{
+  height: 25px;
+  font-size: 13px;
+  color: #939598;
+  margin-bottom: 8px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
