Styling user photo

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -58,9 +58,9 @@
 
 // dropdown button logo in header 
 .profile-dropdown {
-    height: 40px;
-    border: solid 2px #B92B27;
-    border-radius: 25px;
+  height: 45px;
+  width: 45px;
+  border-radius: 50px;
 }
 .profile-dropdown:hover {
   cursor: pointer;  
