--- a/app/assets/stylesheets/api/topics.scss
+++ b/app/assets/stylesheets/api/topics.scss
@@ -69,3 +69,9 @@
   height: 24px;
   margin-right: 8px;
 }
+
+.resources-spacing{
+  color: lightgrey;
+  padding-left: 5px;
+  padding-right: 5px;
+}
