--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript">
     window.fullLogoURL = "<%= image_url('RickandMortyBackground.jpg') %>";
-    window.profilePic = "<%= image_url('profile.jpg') %>";
+    window.profilePic = "<%= image_url('profile.png') %>";
     window.magnifyingGlass = "<%= image_url('magnifyingGlass.png') %>";
     window.Feed = "<%= image_url('feed.jpg') %>";
     window.Home = "<%= image_url('home.png') %>";
