Adding background to dash images

--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -168,7 +168,7 @@
   text-decoration: none;
 }
 
-.center-feed-item {
+.center-feed-image {
   background-color: rgb(247, 247, 248);
   text-align: center;
 }
