--- a/app/assets/stylesheets/api/topics.scss
+++ b/app/assets/stylesheets/api/topics.scss
@@ -3,20 +3,25 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .topic-page {
-  display: flex;
   box-sizing: initial;
   direction: ltr;
-  width: 1002px;
+  align-items: stretch;
+  display: flex;
+  width: 1000px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 40px;
   padding-top: 30px;
-  align-items: stretch;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
 }
 
 .topic-dash {
   box-sizing: border-box;
   direction: ltr;
   width: 658px;
+  margin-left: 170px;
 }
 
 .topic-img {
