--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -16,9 +16,7 @@
 
 .question-page-box {
   width: 630px;
-  padding-top: 30px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 30px 24px 0px 24px;
   align-self: center;
 }
 
@@ -65,8 +63,7 @@
   border-top-style: solid;
   border-width: 1px;
   border-color: #dee0e1;
-  padding-bottom: 8px;
-  padding-top: 8px;
+  padding: 8px 0px 8px 0px;
   font-size: 15px;
   font-weight: 500;
   color: #282829;
