--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -8,9 +8,7 @@
   left: 0px;
   width: -webkit-fill-available;
   height: 40px;
-  padding: 5px;
-  padding-right: 25px;
-  padding-left: 25px;
+  padding: 5px 30px 5px 30px;
   border-bottom-style: solid;
   border-width: 1px;
   border-color: #dee0e1;
@@ -32,7 +30,7 @@
   color: #B92B27;
   font-size: 25px;
   display: flex;
-  padding-top: 5px;
+  padding: 5px 0px 0px 0px;
   height: -webkit-fill-available;
  }
 
@@ -44,14 +42,14 @@
 .home-name {
   font-weight: 600;
   font-size: 16px;
-  padding-top: 5px;
+  padding: 5px 0px 0px 0px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 .home-category-icon {
     height: 25px;
     width: 25px;
-    padding-right: 8px;
+    padding: 0px 8px 0px 0px;
 }
  
  // div
@@ -121,10 +119,7 @@
   display: flex;
   -webkit-tap-highlight-color: transparent;
   align-items: center;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 8px 16px 8px 16px;
   font-size: 13px;
   color: #282829;
 }
@@ -157,10 +152,7 @@
   display: flex;
   -webkit-tap-highlight-color: transparent;
   align-items: center;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 8px 16px 8px 16px;
   font-size: 13px;
   color: #282829;
 }
@@ -194,9 +186,7 @@
   font-weight: bold;
   font-size: 18px;
   color: #282829;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 0px 16px 8px 16px;
   border-bottom: 1px solid lightgrey;
 }
 
