--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -53,7 +53,7 @@
     border: 1px solid #e2e2e2;
     box-shadow: 0 0 5px #888;
     border-radius: 4px;
-    padding-top: 25px;
+    padding: 25px 0px 0px 0px;
     width: 650px;
     position: absolute;
     bottom: initial;
@@ -81,8 +81,7 @@
   
   #login-form {
     border-left: solid 1px lightgrey ;
-    padding: 40px;
-    padding-top: 0;
+    padding: 0 40px 40px 40px;
   }
 
   #signup-page-height {
@@ -94,7 +93,7 @@
     font-weight: bold;
     letter-spacing: .5px;
     font-size: 11px;
-    padding-right: 50px;
+    padding: 0px 50px 0px 0px;
   }
 
   .signup-agreement {
@@ -103,8 +102,7 @@
     font-weight: 400;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
     line-height: 1.4;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 0px 10px 0px;
     width: 110%;
   }
   
@@ -203,8 +201,7 @@
     width: 100%;
     font-size: 13px;
     line-height: 1.4;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 0px 8px 0px 8px;
     min-height: 27px;
     margin-bottom: 8px;
     font-weight: 400;
