--- a/app/assets/stylesheets/api/topics.scss
+++ b/app/assets/stylesheets/api/topics.scss
@@ -8,9 +8,7 @@
   align-items: stretch;
   display: flex;
   width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40px;
+  margin: 0px auto 0px auto;
   padding: 30px 24px 24px 24px;
 }
 
@@ -18,7 +16,6 @@
   box-sizing: border-box;
   direction: ltr;
   width: 658px;
-  margin-left: 170px;
 }
 
 .topic-img {
