--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -82,3 +82,16 @@
   margin-bottom: 8px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+
+.topic-tags{
+  background-color: #f7f7f8;
+  padding: 4px 8px 4px 8px;
+  cursor: pointer;
+  color: #636466;
+  border-radius: 3px;
+  font-size: 13px;
+}
+
+.topic-tags:hover{
+  color: #2e69ff;
+}
