--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -3,7 +3,7 @@
   justify-content: space-around;
   align-items: center;
   background-color: rgb(255, 255, 255);
-  position: fixed;
+  position: sticky;
   top: 0px;
   left: 0px;
   width: -webkit-fill-available;
