Adding ability to update question topics

--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -86,6 +86,7 @@
 .topic-tags{
   background-color: #f7f7f8;
   padding: 4px 8px 4px 8px;
+  margin: 0px 8px 0px 0px;
   cursor: pointer;
   color: #636466;
   border-radius: 3px;
