Adjusting header spacing between squished items

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -32,7 +32,7 @@
   color: #B92B27;
   font-size: 25px;
   display: flex;
-  padding: 5px 0px 0px 0px;
+  padding: 8px 10px 0px 10px;
   height: -webkit-fill-available;
  }
 
@@ -64,6 +64,7 @@
   height: 30px;
   width: 30px;
   border-radius: 50px;
+  margin: 8px 10px 0px 10px;
 }
 .profile-dropdown:hover {
   cursor: pointer;  
