--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -53,23 +53,15 @@
 
 .header-question-click {
   background-color: #b92b27;
-  border-bottom-left-radius: 1000px;
-  border-bottom-right-radius: 1000px;
-  border-top-left-radius: 1000px;
-  border-top-right-radius: 1000px;
+  border-radius: 1000px;
   border: white;
   box-sizing: border-box;
   cursor: pointer;
   direction: ltr;
   display: inline-block;
   font-family: -apple-system, system-ui, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 15px;
   font-stretch: 100%;
-  font-style: normal;
-  font-variant-caps: normal;
-  font-variant-east-asian: normal;
-  font-variant-ligatures: normal;
-  font-variant-numeric: normal;
+  min-width: max-content;
   font-weight: 400;
   height: 30px;
   line-height: 21px;
