Adding profile image on dashboard

--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -163,3 +163,10 @@
 
 .the-content {
 }
+
+.user-dash-question-pic{
+  width: 18px;
+  height: 18px;
+  border-radius: 100%;
+  padding: 0px 8px 0px 8px;
+}
