--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
+  min-height: -webkit-fill-available;
 }
 
 .question-page-box {
